--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -12,13 +12,13 @@
     {% for item in items %}
         <tr>
             {% if item.done %}
-            <td><strike>{{item.name}}</strike></td>
+            <td><del>{{item.name}}</del></td>
             {% else %}
             <td>{{item.name}}</td>
             {% endif %}
         </tr>
     {% empty %}
-        <tr><td>{{item.name}}</td></tr>
+        <tr><td>You have nothing to do</td></tr>
     {% endfor %}
     </table>
 </body>
