--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -23,5 +23,6 @@
         <tr><td>You have nothing to do</td></tr>
     {% endfor %}
     </table>
+    <a href="/add_item">Add an Item</a>
 </body>
 </html>
