--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -23,6 +23,8 @@
         <tr><td>You have nothing to do</td></tr>
     {% endfor %}
     </table>
-    <a href="/add_item">Add an Item</a>
+    <a href="/add_item_manual">Add an Item (manual built form)</a>
+    <br>
+    <a href="/add_item_auto">Add an Item (auto built form)</a>
 </body>
 </html>
