--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -18,13 +18,18 @@
             {% else %}
             <td>{{item.name}}</td>
             {% endif %}
+            <td>
+                <a href="{% url 'edit_item_auto' item.id %}">
+                    <button>Edit</button>
+                </a>
+            </td>
         </tr>
     {% empty %}
         <tr><td>You have nothing to do</td></tr>
     {% endfor %}
     </table>
-    <a href="/add_item_manual">Add an Item (manual built form)</a>
+    <a href="{% url 'add_item_manual' %}">Add an Item (manually built form)</a>
     <br>
-    <a href="/add_item_auto">Add an Item (auto built form)</a>
+    <a href="{% url 'add_item_auto' %}">Add an Item (auto built form)</a>
 </body>
 </html>
