--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -28,6 +28,11 @@
                     <button>Toggle</button>
                 </a>
             </td>
+            <td>
+                <a href="{% url 'remove_item' item.id %}">
+                    <button>Remove</button>
+                </a>
+            </td>
         </tr>
     {% empty %}
         <tr><td>You have nothing to do</td></tr>
